handle get wallets by user, get wallet detail by id
