# app/Http/Controllers/User/WalletController.php
@@ -2,14 +2,18 @@
 
 namespace App\Http\Controllers\User;
 
+use Illuminate\Database\Eloquent\ModelNotFoundException;
 use Illuminate\Validation\ValidationException;
 use App\Services\Wallet\WalletServiceFactory;
+use App\Http\Resources\Wallet\WalletResource;
 use App\Services\Wallet\WalletValidator;
 use App\Http\Controllers\Controller;
+use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\DB;
 use Illuminate\Http\Request;
 use App\Helpers\ApiResponse;
 use App\Enums\HttpStatusCode;
+use App\Models\Wallet;
 
 class WalletController extends Controller
 {
@@ -33,7 +37,39 @@ class WalletController extends Controller
             return ApiResponse::error(__('wallet.invalid_data'), $e->errors(), HttpStatusCode::UNPROCESSABLE_ENTITY);
         } catch (\Exception $e) {
             DB::rollBack();
-            return ApiResponse::error(__('wallet.created_failed') . $e->getMessage(), [], HttpStatusCode::INTERNAL_SERVER_ERROR);
+            return ApiResponse::error(__('wallet.created_failed'), [], HttpStatusCode::INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    public function getWalletsByUser(Request $request)
+    {
+        try {
+            $userId = $request->query('user_id') ?? Auth::id();
+
+            $wallets = Wallet::with(['savingWallet', 'creditWallet'])
+            ->where('user_id', $userId)
+            ->get();
+
+            return ApiResponse::success([
+                'wallets' => $wallets->map(fn ($wallet) => WalletResource::makeFrom($wallet)),
+            ]);
+        } catch (\Exception $e) {
+            return ApiResponse::error(__('wallet.fetch_failed'), [], HttpStatusCode::INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    public function getWalletDetail($id)
+    {
+        try {
+            $wallet =  Wallet::with(['savingWallet', 'creditWallet'])->findOrFail($id);
+
+            return ApiResponse::success([
+                'wallet' => WalletResource::makeFrom($wallet),
+            ]);
+        } catch (ModelNotFoundException $e) {
+            return ApiResponse::error(__('wallet.not_found'), [], HttpStatusCode::NOT_FOUND);
+        } catch (\Exception $e) {
+            return ApiResponse::error(__('wallet.fetch_failed'), [], HttpStatusCode::INTERNAL_SERVER_ERROR);
         }
     }
 }
