# app/Http/Resources/Wallet/CreditWalletResource.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Resources\Wallet;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class CreditWalletResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request)
+    {
+        return [
+            'id'           => $this->id,
+            'user_id'      => $this->user_id,
+            'name'         => $this->name,
+            'balance'      => $this->balance,
+            'currency_id'  => $this->currency_id,
+            'wallet_type'  => $this->wallet_type,
+            'created_at'   => $this->created_at,
+            'updated_at'   => $this->updated_at,
+            'credit_wallet' => $this->whenLoaded('creditWallet'),
+        ];
+    }
+}
